--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Alex Seymour Profile</h1>
+        <h1>Rob Devany Profile</h1>
     </header>
     <main>
         <p>main</p>
+        <p>What we are expecting is:
+
+            Image (of you)
+            Intro text or mini bio
+            Link to your GitHub profile
+            Link to your CodePen profile
+            Links to your other social profiles - Twitter / LinkedIn etc.
+            
+            Anything else…</p>
     </main>
     <aside>
         <p>Sidebar</p>
